test/arrays/errors/promotedSizeMismatch.chpl
var A : [1..5, 1..5] int = 0;
var B : [1..5, 1..3] int = 1;

A += B;

writeln(A);
