test/arrays/errors/promotedSizeMismatch.good
promotedSizeMismatch.chpl:4: error: halt reached - size mismatch in zippered iteration (dimension 1)
